--- a/python_exercicio_32.ipynb
+++ b/python_exercicio_32.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaHUmh1DelZOJ8yK+FQSwN",
+      "authorship_tag": "ABX9TyOy+WnsgIjyYTBMuyu6wCl3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/adalberto8648/python/blob/main/python_exercicio_32.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/adalberto8648/exerciciopython2024/blob/main/python_exercicio_32.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "'''Exercício 20 / 32:\n",
+        "'''Exercício 20 / 32: 2024\n",
         "\n",
         "Peça ao usuário para digitar 7 números inteiros e armazene-os em uma lista.\n",
         "Verifique se todos os números são positivos e exiba uma mensagem correspondente.\n",
