--- a/python_exercicio_32.ipynb
+++ b/python_exercicio_32.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOy+WnsgIjyYTBMuyu6wCl3",
+      "authorship_tag": "ABX9TyOGYa0nKM+X2Ok0WaKmYqSj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,11 +39,10 @@
         "Peça ao usuário para digitar 7 números inteiros e armazene-os em uma lista.\n",
         "Verifique se todos os números são positivos e exiba uma mensagem correspondente.\n",
         "Pergunte ao usuário se ele deseja multiplicar os números por um valor ou dividi-los por outro valor.\n",
-        "Se a resposta for multiplicar, solicite um número e multiplique todos os valores da lista por esse número.\n",
-        "Se a resposta for dividir, solicite um número e divida todos os valores da lista por esse número.\n",
-        "Exiba a nova lista formatada com duas casas decimais.\n",
-        "Por fim, calcule e exiba a média dos valores da nova lista.\n",
-        "Alterar o código feito para incluir o loop while'''\n",
+        "Multiplique ou divida todos os números pelo valor que irá solicitar.\n",
+        "Exiba as listas formatadas com duas casas decimais.\n",
+        "Por fim, calcule e exiba as médias.\n",
+        "Incluir o loop while, for, def'''\n",
         "\n",
         "lista_vazia = []\n",
         "print(\"Você pode digitar até 7 números inteiros. Para encerrar, digite um número negativo.\")\n",
